--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html />
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +41,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+     <script src="%PUBLIC_URL%/js/jquery-3.2.1.min.js"></script>
+     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
   </body>
 </html>
